# dashboard

./: .dockerignore  .env.cloud  .env.development  .env.production  .env.staging  .env.test  .eslintignore  .eslintrc-auto-import.json  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  .stylelintrc.js  DATABASE_PUBSUB_README.md  GLOBAL_SETTING_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  auto-imports.d.ts  components.d.ts  dashboard.html  docker-compose.e2e.yml  index.html  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  shims.d.ts  tsconfig.json
ai-sql-service/: README.md  package.json  pnpm-lock.yaml
assets/: arco.09114a2e.js  arco.0a60d326.js  arco.116d7a18.js  arco.1967c6d6.js  arco.2625fa47.js  arco.2be430d2.js  arco.372fa367.js  arco.3a25ee88.js  arco.3a351844.js  arco.3c724825.js  arco.50af8aaa.js  arco.6021f268.js  arco.638ef8fc.js  arco.643eb8a8.js  arco.6cd4d6d1.js  arco.7245f4cd.js  arco.7273ec96.js  arco.7d92af41.js  arco.a04d5bd3.js  arco.a18c68e0.js  arco.a57ec162.js  arco.b6d689ef.js  arco.c9dd6f7b.js  arco.dbf91bf1.js  arco.e8535106.js  arco.f573c5ac.js  chart.00f67955.js  chart.0b770fd8.js  chart.0f31f93c.js  chart.1903b0f4.js  chart.2e1e0ea8.js  chart.3333a628.js  chart.3494c682.js  chart.3a27d136.js  chart.3ae44766.js  chart.3c0feddf.js  chart.3d4c6e23.js  chart.4225530a.js  chart.45194597.js  chart.4f759cbb.js  (+1700 more)
config/: vite.config.base.ts  (+2 more)
src/: App.vue  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_plugin.rs  lib.rs
(+425 files in other folders)
